# rag-project

./: .gitignore  README.md  parse.py  pyproject.toml  test.txt
demo/backend/: chat.py  main.py  prompts.py  pyproject.toml  schemas.py  sql.py
demo/backend/wandb/: latest-run
demo/backend/wandb/run-20240422_172851-wwq5w3gq/: run-wwq5w3gq.wandb
demo/backend/wandb/run-20240422_172949-uiww7sn6/: run-uiww7sn6.wandb
demo/backend/wandb/run-20240422_173237-bfgubgo8/: run-bfgubgo8.wandb
demo/backend/wandb/run-20240422_173240-3mk0g59i/: run-3mk0g59i.wandb
demo/backend/wandb/run-20240422_173244-kzltbqnc/: run-kzltbqnc.wandb
demo/backend/wandb/run-20240422_173252-fhurww33/: run-fhurww33.wandb
demo/backend/wandb/run-20240422_173557-9avkmmpf/: run-9avkmmpf.wandb
demo/backend/wandb/run-20240422_173601-mz1qahnh/: run-mz1qahnh.wandb
demo/backend/wandb/run-20240422_173630-x6yf6uzm/: run-x6yf6uzm.wandb
demo/backend/wandb/run-20240422_183054-c8utt89p/: run-c8utt89p.wandb
demo/backend/wandb/run-20240422_183305-ag9rrpb1/: run-ag9rrpb1.wandb
demo/backend/wandb/run-20240422_183309-3oz6mnc0/: run-3oz6mnc0.wandb
demo/backend/wandb/run-20240422_183438-5ppeni0u/: run-5ppeni0u.wandb
demo/backend/wandb/run-20240422_183904-kydwmke0/: run-kydwmke0.wandb
demo/backend/wandb/run-20240422_183908-auagy9j1/: run-auagy9j1.wandb
demo/backend/wandb/run-20240422_183946-2miiv8tz/: run-2miiv8tz.wandb
demo/backend/wandb/run-20240422_184005-komuxlbe/: run-komuxlbe.wandb
demo/backend/wandb/run-20240422_184247-wb3vbqxk/: run-wb3vbqxk.wandb
demo/backend/wandb/run-20240422_184304-vbftgj70/: run-vbftgj70.wandb
demo/backend/wandb/run-20240422_184646-ftevt1m1/: run-ftevt1m1.wandb
demo/backend/wandb/run-20240422_184653-kjpdvznk/: run-kjpdvznk.wandb
demo/backend/wandb/run-20240422_184657-xk9ws91l/: run-xk9ws91l.wandb
demo/backend/wandb/run-20240422_184704-g57jqzwe/: run-g57jqzwe.wandb
(+227 files in other folders)
