[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.26"
ipykernel = "^6.29.4"
llama-index-embeddings-huggingface = "^0.2.0"
pypdf2 = "^3.0.1"
load-dotenv = "^0.1.0"
ragas = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
